# sqlite3-cmake

./: CMakeLists.txt  Findsqlite3.cmake  LICENSE  README.md  cmake-testbuild.sh
cmake-testbuild/: CMakeLists.txt
